# autoinput

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_POLICY_20250809_20250809.md  CLAUDEMD_CONFIG_20250809_20250809.md  CODE_OF_CONDUCT_20250809.md  CONTRIBUTING_20250809.md  DAILY_LOG.md  Dockerfile  Document_Index.md  FILE_VERSIONING_POLICY_20250809.md  LTCI_Facilities_Directory_Sources.md  PROGRESS.md  PROJECT_MANAGEMENT_GUIDE_20250809.md  PROJECT_RULES_20250809.md  README_20250809_20250809.md  South_Korea_LTCI_Market_Analysis.md  TASKMASTER_20250809.md  bizmeka_mail_excel.py  bizmeka_mail_manual.py  bizmeka_mail_simple.py  docker-compose.yml  login_bizmeka.py  login_mekics_now.py  mekics_session_notes.md  package-lock.json  parsed_tasks.json  pyproject.toml  requirements.txt  run.py  run_bizmeka_mail.py  sample_prd.txt  sitesbizmekaconfigsettings.json  test_bizmeka_mail.py  test_universal_login.py
.claude/: settings.local.json
001_[별지_제1호의2서식]_장기요양인정_신청서(노인장기요양보험법_시행규칙)/: index.xhtml  styles.css
[별지_제45호_서식]_수령증/: index.xhtml  styles.css
bizmeka_automation/: .env.example  .gitignore  MAIL_SCRAPER_GUIDE.md  README.md  analyze_mail_structure.py  auto_access.py  config.json  cookie_manager.py  mail_scraper.py  mail_scraper_auto.py  mail_scraper_correct.py  mail_scraper_debug.py  mail_scraper_devtools.py  mail_scraper_dynamic.py  mail_scraper_final.py  mail_scraper_final_correct.py  mail_scraper_fixed.py  mail_scraper_interactive.py  mail_scraper_manual.py  mail_scraper_simple.py  mail_scraper_working.py  manual_login.py  run_debug.bat  run_mail_scraper.bat  test_improved_extraction.py  test_mail_extraction.py  test_system.py  utils.py
(+766 files in other folders)
